# rogue

./: .gitignore  README.md  package.json  pyproject.toml
docs/: ROADMAP.md
rogue-gateway/: .railwayignore  Dockerfile  pyproject.toml  railway.toml
rogue-gateway/scripts/: run-gateway.sh
rogue-gateway/src/rogue_gateway/: __init__.py  auth.py  main.py
rogue-gateway/src/rogue_gateway/adapters/: __init__.py  claude.py  codex.py  gemini.py  opencode.py  registry.py
rogue-gateway/src/rogue_gateway/handover/: log.py  models.py  sync.py
rogue-gateway/src/rogue_gateway/imessage/: __init__.py  bridge.py
rogue-gateway/src/rogue_gateway/session/: __init__.py  manager.py
rogue-gateway/tests/: conftest.py  test_e2e_opencode.py  test_handover_sync.py  test_opencode_adapter.py  test_ws_bridge.py
rogue-ios/: Package.swift
rogue-ios/Rogue/App/: RogueApp.swift
rogue-ios/Rogue/Core/: Core.swift
rogue-ios/Rogue/Core/ACP/: ACPClient.swift  GatewayConnector.swift
rogue-ios/Rogue/Core/Design/: Colors.swift  Typography.swift
rogue-ios/Rogue/Core/Session/: SessionManager.swift
rogue-ios/Rogue/Features/: Features.swift
rogue-ios/Rogue/Features/Chat/: ChatView.swift  ChatViewModel.swift  EmptyStateView.swift  ToolCallCard.swift
rogue-ios/Rogue/Features/Commands/: SlashCommandPalette.swift
rogue-ios/Rogue/Features/Settings/: GatewaySettingsView.swift
rogue-ios/Rogue/Features/Threads/: ThreadListView.swift
