# Monorepo workspace for Rogue — iOS app + Python gateway.
# Implements ~/.claude/rules/monorepo-strategy.md.
[project]
name = "rogue"
version = "0.1.0"
requires-python = ">=3.11"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["rogue-gateway"]

# Shared Python quality dependencies for Layer 1/2/3 gates.
# Implements ~/.claude/rules/quality-toolchain-pre-merge.md.
# Exact pins (==) for hermetic reproducibility per ~/.claude/rules/hermetic-builds.md.
[dependency-groups]
dev = [
  "bandit[toml]==1.9.4",
  "mypy==2.1.0",
  "pip-audit==2.10.0",
  "pytest==9.0.3",
  "ruff==0.15.14",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "PLR", "C90", "B", "UP", "S", "RUF"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 12
max-statements = 80
max-returns = 6

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
