[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rogue_gateway"]

[project]
name = "rogue-gateway"
version = "0.1.0"
description = "ACP-to-WebSocket bridge for mobile CLI agent control"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Sammy", email = "pilambdamew@gmail.com" },
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "boto3>=1.35.0",
    "aiosqlite>=0.20.0",
    # acp — ACP Python SDK from agentclientprotocol (v1).
    # Not on PyPI; install from source or local wheel:
    #   pip install /path/to/acp-sdk-python
    # Phase A wires this properly from lattice-code or agentclientprotocol repo.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.7.0",
]

[dependency-groups]
dev = [
    "xenon>=0.9.3",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "fastapi",
    "starlette",
    "uvicorn",
    "acp.*",
    "acp",
    "pytest",
    "aiosqlite",
    "pydantic_settings",
    "boto3",
    "botocore",
    "websockets",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["src.rogue_gateway.main"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
